refactor: Make test factory functions in GtfsModule & GtfsBundle